# agent-system-advanced

./: .gitignore  README.md  graph.py  install_completion.sh  main.py  pyproject.toml  state.py
agent_system/: graph.py  logging_config.py  main.py  state.py
agent_system/agents/: analyst.py  coordinator.py  critic.py  executor.py  manager.py  memory_agent.py  planner.py  researcher.py
agent_system/memory/: vector_memory.py
agent_system/tools/: web_search.py
agents/: critic.py  executor.py  planner.py  researcher.py
tests/: test_workflow.py
tools/: web_search.py
